[tool.poetry]
name = "mediasplash"
version = "1.3.0"
description = "A simple and accessible media player with unique features"
authors = ["mohamedSulaimanAlmarzooqi <uae566340007@hotmail.com>", "Mazen <mzanf4@gmail.com>"]
license = "GPL V 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wxPython = "^4.2.1"
pysubs2 = "^1.6.1"
cytolk = [ { version = "^0.1.12", platform = "windows" } ]
mpv = "^1.0.3"
requests = "^2.31.0"
pyobjc = {version = "^9.2", platform = "darwin"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
Nuitka = "^1.6.2"
ruff = "^0.0.272"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
